--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
-GEMINI_API_KEY=AIzaSyB7B6681pEsgWq9mFkJNVqo3viGty2KiRw
+# create your own API KEY at https://aistudio.google.com/apikey
+REACT_APP_GEMINI_API_KEY='AIzaSyB7B6681pEsgWq9mFkJNVqo3viGty2KiRw'
