--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@types/react-syntax-highlighter": "^15.5.13",
     "eslint": "^8.57.0",
     "eslint-config-next": "14.1.4",
+    "next-pwa": "^5.6.0",
     "typescript": "^5.6.3"
   }
-} 
+}
